@@ -7,6 +7,8 @@ Slated for 2.18.1
   types.
 - Added: Common.urlUnescape(String) for un-escaping a URL-encoded string.
 - Added: Reflect.getClasses(String) for package and classpath scanning.
+- Added: Reflect.getClasses(String, ClassLoader) for package and classpath 
+  scanning.
 
 Changed in 2.18.0
 =================
